# GPU-Biometric-Matching

./: .gitignore  .gitmodules  README.md  abstract.html  alignment_evaluation.py  alignment_visualizations.ipynb  custom_alignments.py  experiment_runner.py  experiment_setup.py  keypoints_extraction.py  manual_alignments.py  mask.py  mask_experiment.py  run_all.py  visualizations.ipynb  visualize.py
.ipynb_checkpoints/: alignment_visualizations-checkpoint.ipynb
alignment-cpp/: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  api_timing.c  benchmarkingAndTesting.cpp  build_dataset.c  distance.cpp  distance.hpp  distance_results_for_analysis.cpp  extraction.cpp  extraction.hpp  fingervein_extraction.cpp  fingervein_extraction.h  helper.cpp  helper.hpp  main.c  mask_extraction.cpp  mask_extraction.hpp  pipeline.cpp  pipeline.hpp  postalignment.cpp  postalignment.hpp  prealignment.cpp  prealignment.hpp  read_png.c  read_png.h
alignment-cpp/distance_results/: distance_results_for_analysis.cpp
alignment-cpp/timing/: timing_runner.sh
alignment-cpp/timing/pipeline_complete/: measureTime_pipelineComplete.cpp
alignment-cpp/timing/pipeline_steps/: measureTime_matchingSteps.cpp  measureTime_pipelineSteps.cpp
alignment-cpp/unit_testing/: unit_tests.cpp
alignment-python/: .gitignore  README.md  experiment_runner.py  pyvenv.cfg  testing.py  visualize.py
alignment-python/distance_results/: distance_results_for_analysis.py
alignment-python/resources/: __init__.py  distances.py  extraction_pipeline.py
alignment-python/timing/: timing_runner.sh
alignment-rs/: Cargo.toml  README.md  build.rs
alignment-rs/src/: lib.rs  sys.rs
analysis-tools/timing_analysis/: timing_data_preprocess_steps.py  timing_data_preprocess_tot_mc.py
dataset_i/max_curvature/: 3_left_index_1_cam1.npy  3_left_index_1_cam2_mask.npy  3_left_index_2_cam1.npy  3_left_index_2_cam1_mask.npy  3_left_index_2_cam2_mask.npy  3_left_little_1_cam2.npy  3_left_little_2_cam1.npy  3_left_little_2_cam1_mask.npy  3_left_little_2_cam2.npy  3_left_little_2_cam2_mask.npy  3_left_middle_1_cam1_mask.npy  3_left_middle_2_cam2_mask.npy  3_left_ring_1_cam1_mask.npy  3_left_ring_1_cam2.npy  3_left_ring_1_cam2_mask.npy  3_left_ring_2_cam1.npy  3_left_ring_2_cam1_mask.npy  3_left_ring_2_cam2.npy  3_left_thumb_1_cam1.npy  3_left_thumb_1_cam2.npy  3_left_thumb_2_cam1_mask.npy  3_left_thumb_2_cam2.npy  3_right_index_1_cam1.npy  3_right_index_1_cam1_mask.npy  3_right_index_1_cam2.npy  3_right_index_2_cam1_mask.npy  3_right_little_1_cam1.npy  3_right_little_1_cam1_mask.npy  3_right_little_1_cam2.npy  3_right_little_1_cam2_mask.npy  3_right_little_2_cam1.npy  3_right_little_2_cam1_mask.npy  3_right_middle_1_cam2.npy  3_right_middle_1_cam2_mask.npy  3_right_middle_2_cam1.npy  3_right_middle_2_cam2.npy  3_right_middle_2_cam2_mask.npy  3_right_ring_1_cam1.npy  3_right_ring_1_cam2.npy  3_right_ring_1_cam2_mask.npy  (+30 more)
dataset_i/maximum_curvature/: 0_left_index_1_cam1.npy  0_left_index_1_cam1_mask.npy  0_left_index_1_cam2.npy  0_left_index_1_cam2_mask.npy  0_left_little_1_cam1.npy  0_left_little_1_cam1_mask.npy  0_left_little_1_cam2.npy  0_left_little_1_cam2_mask.npy  0_left_middle_1_cam1.npy  0_left_middle_1_cam1_mask.npy  0_left_middle_1_cam2.npy  0_left_middle_1_cam2_mask.npy  0_left_ring_1_cam1.npy  0_left_ring_1_cam1_mask.npy  0_left_ring_1_cam2.npy  0_left_ring_1_cam2_mask.npy  0_left_thumb_1_cam1.npy  0_left_thumb_1_cam1_mask.npy  0_left_thumb_1_cam2.npy  0_left_thumb_1_cam2_mask.npy  0_right_index_1_cam1.npy  0_right_index_1_cam1_mask.npy  0_right_index_1_cam2.npy  0_right_index_1_cam2_mask.npy  0_right_little_1_cam1.npy  0_right_little_1_cam1_mask.npy  0_right_little_1_cam2.npy  0_right_little_1_cam2_mask.npy  0_right_middle_1_cam1.npy  0_right_middle_1_cam1_mask.npy  0_right_middle_1_cam2.npy  0_right_middle_1_cam2_mask.npy  0_right_ring_1_cam1.npy  0_right_ring_1_cam1_mask.npy  0_right_ring_1_cam2.npy  0_right_ring_1_cam2_mask.npy  0_right_thumb_1_cam1.npy  0_right_thumb_1_cam1_mask.npy  0_right_thumb_1_cam2.npy  0_right_thumb_1_cam2_mask.npy  (+303 more)
experiments/: exp_specifications.json  experiment_index.txt
experiments/experiment_i/: spec.json  visualization_i.py  visualize_i.py
experiments/experiment_ii/: metadata.txt  visualize.py  visualize_ii.py
experiments/experiment_iii/: metadata.txt  visualize_iii.py
experiments/experiment_iv/: metadata.txt
experiments/experiment_ix/: metadata.txt  visualize_ix.py
experiments/experiment_v/: metadata.txt  visualize_v.py
experiments/experiment_vi/: metadata.txt  visualize_vi.py
experiments/experiment_vii/: metadata.txt  visualize_vii.py
experiments/experiment_viii/: visualize_i.py
experiments/experiment_x/: metadata.txt
experiments/experiment_xi/: combine.py  metadata.txt  run.py  visualize_xi.py
experiments/experiment_xii/: combine_cams.py  run.py
experiments/experiment_xiii/: combine.py  run.py  visualize_xiii.py
experiments/experiment_xiv/: combine.py  visualize_xiii.py
experiments/experiment_xv/: visualize_xv.py
experiments/experiment_xvi/: combine_cams.py  visualize_xvi.py
experiments/experiment_xx/: combine_cams.py  combined_score.py  visualize_xx.py
prev-project/: README.md  alignment_evaluation.py  meanandvariance.py
prev-project/FE/: alignment.tex  appendix.tex  biblio.bib  cl.tex  common.tex  fuzzyextractor.tex  intro.tex  main.tex  presentation.tex
prev-project/__MACOSX/: ._FE  ._meanandvariance.py  ._resources
prev-project/resources/: __init__.py  biocore.py  hashing.py  scores.py
project_results/experiment_i/: visualize_i.py
project_results/experiment_xx/: combined_score.py  scratch.txt  summary.csv  summary_combined_miura.csv
report_experiments/: experiment_index.txt
resources/: __init__.py  background.py  background_elimination.cpp  biocore.py  distances.py  extraction.py  extraction_pipeline.py  postalign.py  postprocess.py  prealign.py  preprocess.py  scores.py
resources/utils/: __init__.py
terminal/: single_runner.py
visualization/: alignment_visualizations.ipynb  visualize.py
(+400 files in other folders)
